--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 
 [dependencies]
 tun-tap = "0.1.4"
+# TODO: implement your own ip parser, till then use this crate
+etherparse = '0.19.0'
